--- a/src/components/Face.css
+++ b/src/components/Face.css
@@ -41,22 +41,6 @@ label {
   flex-direction: column;
 }
 
-.avatar {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  margin-right: 20px;
-}
-
-button {
-  border: none;
-  padding: 5px 10px;
-  border-radius: 5px;
-  color: white;
-  background-color: teal;
-  cursor: pointer;
-}
-
 .postInput {
   height: 30px;
   border: none;
@@ -90,4 +74,14 @@ button {
 
 .pushImage {
   zoom: 0.2;
+}
+
+.submit {
+  border: 1px solid #333;
+  border-radius: 30px;
+  padding: 10px 60px;
+}
+
+.smileIcon {
+  font-size: large;
 }
