--- a/src/components/Face.css
+++ b/src/components/Face.css
@@ -2,17 +2,6 @@ canvas {
   position: absolute;
 }
 
-.navbar {
-  height: 50px;
-  background-color: #4064ac;
-  display: flex;
-  align-items: center;
-  color: white;
-  font-weight: bold;
-  padding: 0 100px;
-  font-size: 20px;
-}
-
 .newPostCard {
   /* height: 100vh; */
   margin-top: 100px;
@@ -23,17 +12,14 @@ canvas {
 
 .addPost {
   display: flex;
+  flex-flow: column;
 }
 
 label {
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-
-.addImg {
-  width: 25px;
-  height: initial;
+  cursor: pointer;
 }
 
 .postForm {
@@ -52,8 +38,8 @@ label {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 100px;
   margin-bottom: 50px;
+  gap: 100px;
 }
 
 .left {
@@ -73,7 +59,8 @@ label {
 }
 
 .pushImage {
-  zoom: 0.2;
+  /* zoom: 0.2; */
+  height: 600px;
 }
 
 .submit {
@@ -82,6 +69,21 @@ label {
   padding: 10px 60px;
 }
 
-.smileIcon {
-  font-size: large;
+.submit:hover {
+  background-color: #333;
+  color: #fff;
+}
+
+.avater {
+  width: 90px;
+  display: block;
+  margin: 0 auto;
+}
+
+.reset {
+  width: 300px;
+  display: block;
+  margin: 0 auto;
+  cursor: pointer;
+  margin-bottom: 20px;
 }
