create-adminpage-second

--- a/src/components/Manage2.css
+++ b/src/components/Manage2.css
@@ -5,3 +5,19 @@
 .css-p55zm9-MuiButtonBase-root-MuiIconButton-root {
   margin: 0 40px 0px -12px !important;
 }
+
+.css-de9k3v-MuiDataGrid-selectedRowCount {
+  visibility: hidden !important;
+  width: auto;
+  height: auto;
+}
+
+.face-graph {
+  display: flex;
+  text-align: center;
+  margin-left: 10%;
+}
+
+.face-graph img {
+  height: 650px;
+}
